--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,28 +1,3 @@
-<!-- <html>
-	<head>
-		<title> Clothing Store </title>
-		<style> 
-			h1 {text-align: center}
-			div {text-align: center}
-		</style>
-	</head>
-	<body>
-		<br>
-		<br>
-		<h1> Bienvenidos a Clothing Store </h1>
-		<br>
-		<br>
-		<div>
-			<form action="validar" method="post">
-				Usuario: <input type= "text" name="usuario"> <br><br>
-				Contraseña: <input type="password" name="password"> <br> <br>
-				<input type="submit" value="Aceptar">
-				<button> <a href="/logout"> Cancelar </a> </button>
-			</form>
-		</div>
-	</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -57,7 +32,7 @@
                     <div class="form-group" id="contrasena-group">
                         <input type="password" class="form-control" placeholder="Contraseña" name="password"/>
                     </div>
-                    <button type="submit" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i>  Aceptar </button>
+                    <button type="submit" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i>  Ingresar </button>
                 </form>
                 <div class="col-12 forgot">
                     <a href="#"> Recordar contraseña </a>
